Upgrade to Java 21 and experiment it GraalVM